// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`shallow singleTags template escapes HTML special characters in template 1`] = `
<tag
  data-is={
    [
      "tag",
    ]
  }
>
  <p>
    "&&lt;&gt;
  </p>
</tag>
`;

exports[`shallow singleTags template extracts template 1`] = `
<tag
  data-is={
    [
      "tag",
    ]
  }
>
  <p>
    Hello, world!
  </p>
</tag>
`;

exports[`shallow singleTags template renders ignoring style 1`] = `
<static
  data-is={
    [
      "static",
    ]
  }
>
  <p>
    Hello, world!
  </p>
</static>
`;

exports[`shallow singleTags template renders static tag 1`] = `
<static
  data-is={
    [
      "static",
    ]
  }
>
  <p>
    Hello, world!
  </p>
</static>
`;

exports[`shallow singleTags template template "each" work 1`] = `
<tag
  data-is={
    [
      "tag",
    ]
  }
>
  <p>
    A
  </p>
  <p>
    B
  </p>
  <p>
    C
  </p>
  
</tag>
`;
